@@ -363,9 +363,9 @@ DRIVERNV(bsv103)        // 05/96    Breakshot (1.3)
 DRIVERNV(bsb105)        // 05/96    Breakshot (Beta, 1.5)
 DRIVERNV(ffv101)        // 10/96    Flipper Football (1.01)
 DRIVERNV(ffv104)        // 10/96    Flipper Football (1.04)
-DRIVERNV(bbb108)        // 11/96    Big Bang Bar (Beta, 1.8)
-DRIVERNV(bbb109)        // 11/96    Big Bang Bar (Beta, 1.9)
-DRIVERNV(kpv106)        // 12/96    Kingpin
+DRIVERNV(bbb108)        // 11/96    Big Bang Bar (Beta 1.8)
+DRIVERNV(bbb109)        // 11/96    Big Bang Bar (Beta 1.9)
+DRIVERNV(kpb105)        // 12/96    Kingpin (Beta 1.05)
 
 // ----------------
 // CICPLAY GAMES
